// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms Avatars 1`] = `
<ForwardRef(styled.div)
  height={20}
  width={20}
/>
`;

exports[`Storyshots atoms Boxes 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    port eyeballs Rufiyaa
  </ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    sensor users Administrator
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots atoms Heros 1`] = `
<ForwardRef(styled.div)>
  Missouri Cotton harness
</ForwardRef(styled.div)>
`;

exports[`Storyshots atoms Rank Bars 1`] = `<DefaultRankBar />`;

exports[`Storyshots molecules Admires 1`] = `
<ForwardRef(styled.div)
  fixed={true}
>
  <ForwardRef(styled.div)
    fixed={true}
  >
    <DefaultAdmire />
    <DefaultAdmire />
    <DefaultAdmire />
    <DefaultAdmire />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots molecules Heros 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      height={4.688}
      isCircle={true}
      width={4.688}
    >
      <img
        alt="Credit Card Account"
        src="http://lorempixel.com/300/300"
      />
    </ForwardRef(styled.div)>
    <ForwardRef(styled.p)
      padding={1}
      white={true}
    >
      help-desk
    </ForwardRef(styled.p)>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots molecules Range Input 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <p>
        Credit Card Account
      </p>
      <p>
        deposit
      </p>
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.input)
        step="25"
        type="range"
      />
      <ForwardRef(styled.span)
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </ForwardRef(styled.span)>
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots molecules Ranges 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <p>
        Balanced
      </p>
      <p>
        Yen
      </p>
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <ForwardRef(styled.span)
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </ForwardRef(styled.span)>
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots molecules Ranks 1`] = `
<ForwardRef(styled.div)>
  <span>
    44025
  </span>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)
        height={2.5}
        width={2.5}
      >
        <img
          alt="Computer"
          src="http://lorempixel.com/300/300"
        />
      </ForwardRef(styled.div)>
      <ForwardRef(styled.p)
        padding={0}
      >
        Poland
      </ForwardRef(styled.p)>
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <p>
            Israel
          </p>
          <p>
            withdrawal
          </p>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.input)
            step="25"
            type="range"
          />
          <ForwardRef(styled.span)
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </ForwardRef(styled.span)>
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots molecules Results 1`] = `
<React.Fragment>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <span>
        50人中
      </span>
      10位
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.p)>
    indexing
  </ForwardRef(styled.p)>
</React.Fragment>
`;

exports[`Storyshots pages Admire Page 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.nav)>
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f007",
                  "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
                ],
                "iconName": "user",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  576,
                  512,
                  Array [],
                  "f044",
                  "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
                ],
                "iconName": "edit",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
    </ul>
  </ForwardRef(styled.nav)>
  <ForwardRef(styled.main)>
    <ForwardRef(styled.div)
      fixed={true}
    >
      <ForwardRef(styled.div)
        fixed={true}
      >
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="monitor"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)
              padding={0}
            >
              Money Market Account
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  system
                </p>
                <p>
                  monitoring
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="dynamic"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)>
              Enterprise-wide
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  zero defect
                </p>
                <p>
                  invoice
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="Licensed"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)>
              web-readiness
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  initiatives
                </p>
                <p>
                  Avon
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="markets"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)>
              success
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  deliverables
                </p>
                <p>
                  International
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="Optimization"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)>
              Berkshire
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  Home Loan Account
                </p>
                <p>
                  Plastic
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              height={2.5}
              width={2.5}
            >
              <img
                alt="initiative"
                src="http://lorempixel.com/300/300"
              />
            </ForwardRef(styled.div)>
            <ForwardRef(styled.p)>
              infomediaries
            </ForwardRef(styled.p)>
          </ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <p>
                  JSON
                </p>
                <p>
                  Configurable
                </p>
              </ForwardRef(styled.div)>
              <ForwardRef(styled.div)>
                <ForwardRef(styled.input)
                  step="25"
                  type="range"
                />
                <ForwardRef(styled.span)
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </ForwardRef(styled.span)>
              </ForwardRef(styled.div)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
      <ForwardRef(styled.button)
        theme={
          Object {
            "borders": Array [
              0,
              "1px solid",
            ],
            "breakpoints": Array [
              "544px",
              "768px",
              "1012px",
              "1280px",
            ],
            "colors": Object {
              "black": "#1b1f23",
              "blackfade15": "rgba(27, 31, 35, 0.15)",
              "blackfade20": "rgba(27, 31, 35, 0.20)",
              "blackfade35": "rgba(27, 31, 35, 0.35)",
              "blackfade50": "rgba(27, 31, 35, 0.5)",
              "blue": Array [
                "#f1f8ff",
                "#dbedff",
                "#c8e1ff",
                "#79b8ff",
                "#2188ff",
                "#0366d6",
                "#005cc5",
                "#044289",
                "#032f62",
                "#05264c",
              ],
              "bodytext": "#24292e",
              "button": Object {
                "activeBg": "rgb(233, 236, 239)",
                "bg2": "rgb(239, 243, 246)",
                "border": "rgba(27, 31, 35, 0.2)",
                "dangerActiveBg": "rgb(181, 32, 44)",
                "dangerFocusShadow": "rgba(203, 36, 49, 0.4)",
                "dangerHoverBgImage": "rgb(222, 68, 80)",
                "disabledColor": "rgba(36, 41, 46, 0.4)",
                "focusShadow": "rgba(3, 102, 214, 0.3)",
                "hoverBg": "rgb(230, 235, 241)",
                "outlineBlue": "rgb(3, 102, 214)",
                "outlineShadow": "rgba(3, 102, 214, 0.4)",
                "primaryActiveBg": "rgb(39, 159, 67)",
                "primaryActiveShadow": "rgba(27, 31, 35, 0.15)",
                "primaryBg": "rgb(40, 167, 69)",
                "primaryBgImage": "rgb(52, 208, 88)",
                "primaryBorder": "rgba(27, 31, 35, 0.5)",
                "primaryFocusShadow": "rgba(52, 208, 88, 0.4)",
                "primaryHoverBg": "rgb(38, 159, 66)",
                "primaryHoverBgImage": "rgb(47, 203, 83)",
                "white": "rgb(255, 255, 255)",
              },
              "counter": Object {
                "bg": "rgba(27, 31, 35, 0.08)",
              },
              "filterList": Object {
                "hoverBg": "#eaecef",
              },
              "gray": Array [
                "#fafbfc",
                "#f6f8fa",
                "#e1e4e8",
                "#d1d5da",
                "#959da5",
                "#6a737d",
                "#586069",
                "#444d56",
                "#2f363d",
                "#24292e",
              ],
              "green": Array [
                "#f0fff4",
                "#dcffe4",
                "#bef5cb",
                "#85e89d",
                "#34d058",
                "#28a745",
                "#22863a",
                "#176f2c",
                "#165c26",
                "#144620",
              ],
              "orange": Array [
                "#fff8f2",
                "#ffebda",
                "#ffd1ac",
                "#ffab70",
                "#fb8532",
                "#f66a0a",
                "#e36209",
                "#d15704",
                "#c24e00",
                "#a04100",
              ],
              "purple": Array [
                "#f5f0ff",
                "#e6dcfd",
                "#d1bcf9",
                "#b392f0",
                "#8a63d2",
                "#6f42c1",
                "#5a32a3",
                "#4c2889",
                "#3a1d6e",
                "#29134e",
              ],
              "red": Array [
                "#ffeef0",
                "#ffdce0",
                "#fdaeb7",
                "#f97583",
                "#ea4a5a",
                "#d73a49",
                "#cb2431",
                "#b31d28",
                "#9e1c23",
                "#86181d",
              ],
              "state": Object {
                "error": "#d73a49",
                "failure": "#d73a49",
                "pending": "#dbab09",
                "queued": "#dbab09",
                "success": "#28a745",
                "unknown": "#959da5",
              },
              "white": "#fff",
              "whitefade15": "rgba(255, 255, 255, 0.15)",
              "yellow": Array [
                "#fffdef",
                "#fffbdd",
                "#fff5b1",
                "#ffea7f",
                "#ffdf5d",
                "#ffd33d",
                "#f9c513",
                "#dbab09",
                "#b08800",
                "#735c0f",
              ],
            },
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              40,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "light": 300,
              "normal": 400,
            },
            "fonts": Object {
              "mono": "SFMono-Regular, Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "normal": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            },
            "lineHeights": Object {
              "condensed": 1.25,
              "condensedUltra": 1,
              "default": 1.5,
            },
            "maxWidths": Object {
              "large": "1012px",
              "medium": "768px",
              "small": "544px",
              "xlarge": "1280px",
            },
            "radii": Array [
              0,
              3,
              6,
            ],
            "shadows": Object {
              "extra-large": "0 10px 50px rgba(27, 31, 35, 0.07)",
              "formControl": "rgba(27, 31, 35, 0.075) 0px 1px 2px inset",
              "formControlFocus": "rgba(3, 102, 214, 0.3) 0px 0px 0px 0.2em",
              "large": "0 1px 15px rgba(27, 31, 35, 0.15)",
              "medium": "0 1px 5px rgba(27, 31, 35, 0.15)",
              "small": "0 1px 1px rgba(27, 31, 35, 0.1)",
            },
            "space": Array [
              0,
              4,
              8,
              16,
              24,
              32,
              40,
              48,
              64,
              80,
              96,
              112,
              128,
            ],
          }
        }
        variant="medium"
      >
        Berkshire
      </ForwardRef(styled.button)>
    </ForwardRef(styled.div)>
  </ForwardRef(styled.main)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots pages Mypage 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.nav)>
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f007",
                  "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
                ],
                "iconName": "user",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  576,
                  512,
                  Array [],
                  "f044",
                  "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
                ],
                "iconName": "edit",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
    </ul>
  </ForwardRef(styled.nav)>
  <ForwardRef(styled.main)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)
          height={4.688}
          isCircle={true}
          width={4.688}
        >
          <img
            alt="Manager"
            src="http://lorempixel.com/300/300"
          />
        </ForwardRef(styled.div)>
        <ForwardRef(styled.p)
          padding={1}
          white={true}
        >
          Jamaica
        </ForwardRef(styled.p)>
      </ForwardRef(styled.div)>
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <p>
                とても悪い
              </p>
              <p>
                とても良い
              </p>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.div)
                style={
                  Object {
                    "left": "50%",
                  }
                }
              />
              <ForwardRef(styled.span)
                style={
                  Object {
                    "left": "50%",
                  }
                }
              >
                3
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          <ForwardRef(styled.div)>
            <span>
              50人中
            </span>
            10位
          </ForwardRef(styled.div)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.p)>
          Auto Loan Account
        </ForwardRef(styled.p)>
      </ForwardRef(styled.div)>
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)
          style={
            Object {
              "width": "12%",
            }
          }
        >
          <ForwardRef(styled.div)
            height={0.938}
            width={0.938}
          >
            <img
              alt="Stream"
              src="http://lorempixel.com/300/300"
            />
          </ForwardRef(styled.div)>
          <ForwardRef(styled.p)
            padding={0}
            white={true}
          >
            multi-byte
          </ForwardRef(styled.p)>
        </ForwardRef(styled.div)>
        <ForwardRef(styled.div)
          style={
            Object {
              "width": "28%",
            }
          }
        >
          <ForwardRef(styled.div)
            height={0.938}
            width={0.938}
          >
            <img
              alt="Italy"
              src="http://lorempixel.com/300/300"
            />
          </ForwardRef(styled.div)>
          <ForwardRef(styled.p)
            padding={0}
            white={true}
          >
            clicks-and-mortar
          </ForwardRef(styled.p)>
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
    </ForwardRef(styled.div)>
  </ForwardRef(styled.main)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots pages Signin 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.main)>
    <form
      action="#"
      method="post"
    >
      <ForwardRef(styled.div)>
        <ForwardRef(styled.input)
          placeholder="Evalyn_Johns86@gmail.com"
          type="email"
        />
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f0e0",
                "M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z",
              ],
              "iconName": "envelope",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </ForwardRef(styled.div)>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.input)
          placeholder="AGP"
          type="password"
        />
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f09c",
                "M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z",
              ],
              "iconName": "unlock",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </ForwardRef(styled.div)>
      <ForwardRef(styled.button)
        disabled={true}
        theme={
          Object {
            "borders": Array [
              0,
              "1px solid",
            ],
            "breakpoints": Array [
              "544px",
              "768px",
              "1012px",
              "1280px",
            ],
            "colors": Object {
              "black": "#1b1f23",
              "blackfade15": "rgba(27, 31, 35, 0.15)",
              "blackfade20": "rgba(27, 31, 35, 0.20)",
              "blackfade35": "rgba(27, 31, 35, 0.35)",
              "blackfade50": "rgba(27, 31, 35, 0.5)",
              "blue": Array [
                "#f1f8ff",
                "#dbedff",
                "#c8e1ff",
                "#79b8ff",
                "#2188ff",
                "#0366d6",
                "#005cc5",
                "#044289",
                "#032f62",
                "#05264c",
              ],
              "bodytext": "#24292e",
              "button": Object {
                "activeBg": "rgb(233, 236, 239)",
                "bg2": "rgb(239, 243, 246)",
                "border": "rgba(27, 31, 35, 0.2)",
                "dangerActiveBg": "rgb(181, 32, 44)",
                "dangerFocusShadow": "rgba(203, 36, 49, 0.4)",
                "dangerHoverBgImage": "rgb(222, 68, 80)",
                "disabledColor": "rgba(36, 41, 46, 0.4)",
                "focusShadow": "rgba(3, 102, 214, 0.3)",
                "hoverBg": "rgb(230, 235, 241)",
                "outlineBlue": "rgb(3, 102, 214)",
                "outlineShadow": "rgba(3, 102, 214, 0.4)",
                "primaryActiveBg": "rgb(39, 159, 67)",
                "primaryActiveShadow": "rgba(27, 31, 35, 0.15)",
                "primaryBg": "rgb(40, 167, 69)",
                "primaryBgImage": "rgb(52, 208, 88)",
                "primaryBorder": "rgba(27, 31, 35, 0.5)",
                "primaryFocusShadow": "rgba(52, 208, 88, 0.4)",
                "primaryHoverBg": "rgb(38, 159, 66)",
                "primaryHoverBgImage": "rgb(47, 203, 83)",
                "white": "rgb(255, 255, 255)",
              },
              "counter": Object {
                "bg": "rgba(27, 31, 35, 0.08)",
              },
              "filterList": Object {
                "hoverBg": "#eaecef",
              },
              "gray": Array [
                "#fafbfc",
                "#f6f8fa",
                "#e1e4e8",
                "#d1d5da",
                "#959da5",
                "#6a737d",
                "#586069",
                "#444d56",
                "#2f363d",
                "#24292e",
              ],
              "green": Array [
                "#f0fff4",
                "#dcffe4",
                "#bef5cb",
                "#85e89d",
                "#34d058",
                "#28a745",
                "#22863a",
                "#176f2c",
                "#165c26",
                "#144620",
              ],
              "orange": Array [
                "#fff8f2",
                "#ffebda",
                "#ffd1ac",
                "#ffab70",
                "#fb8532",
                "#f66a0a",
                "#e36209",
                "#d15704",
                "#c24e00",
                "#a04100",
              ],
              "purple": Array [
                "#f5f0ff",
                "#e6dcfd",
                "#d1bcf9",
                "#b392f0",
                "#8a63d2",
                "#6f42c1",
                "#5a32a3",
                "#4c2889",
                "#3a1d6e",
                "#29134e",
              ],
              "red": Array [
                "#ffeef0",
                "#ffdce0",
                "#fdaeb7",
                "#f97583",
                "#ea4a5a",
                "#d73a49",
                "#cb2431",
                "#b31d28",
                "#9e1c23",
                "#86181d",
              ],
              "state": Object {
                "error": "#d73a49",
                "failure": "#d73a49",
                "pending": "#dbab09",
                "queued": "#dbab09",
                "success": "#28a745",
                "unknown": "#959da5",
              },
              "white": "#fff",
              "whitefade15": "rgba(255, 255, 255, 0.15)",
              "yellow": Array [
                "#fffdef",
                "#fffbdd",
                "#fff5b1",
                "#ffea7f",
                "#ffdf5d",
                "#ffd33d",
                "#f9c513",
                "#dbab09",
                "#b08800",
                "#735c0f",
              ],
            },
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              40,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "light": 300,
              "normal": 400,
            },
            "fonts": Object {
              "mono": "SFMono-Regular, Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "normal": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            },
            "lineHeights": Object {
              "condensed": 1.25,
              "condensedUltra": 1,
              "default": 1.5,
            },
            "maxWidths": Object {
              "large": "1012px",
              "medium": "768px",
              "small": "544px",
              "xlarge": "1280px",
            },
            "radii": Array [
              0,
              3,
              6,
            ],
            "shadows": Object {
              "extra-large": "0 10px 50px rgba(27, 31, 35, 0.07)",
              "formControl": "rgba(27, 31, 35, 0.075) 0px 1px 2px inset",
              "formControlFocus": "rgba(3, 102, 214, 0.3) 0px 0px 0px 0.2em",
              "large": "0 1px 15px rgba(27, 31, 35, 0.15)",
              "medium": "0 1px 5px rgba(27, 31, 35, 0.15)",
              "small": "0 1px 1px rgba(27, 31, 35, 0.1)",
            },
            "space": Array [
              0,
              4,
              8,
              16,
              24,
              32,
              40,
              48,
              64,
              80,
              96,
              112,
              128,
            ],
          }
        }
        variant="medium"
      >
        Sign in
      </ForwardRef(styled.button)>
    </form>
  </ForwardRef(styled.main)>
</ForwardRef(styled.div)>
`;

exports[`Storyshots templates Sign In 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.main) />
</ForwardRef(styled.div)>
`;

exports[`Storyshots templates Sign In Default 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.nav)>
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f007",
                  "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
                ],
                "iconName": "user",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  576,
                  512,
                  Array [],
                  "f044",
                  "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
                ],
                "iconName": "edit",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </li>
    </ul>
  </ForwardRef(styled.nav)>
  <ForwardRef(styled.main) />
</ForwardRef(styled.div)>
`;
